gcc/testsuite/rust/rustc/ui/issues/issue-18058.rs
impl Undefined {}
// { dg-error ".E0412." "" { target *-*-* } .-1 }

fn main() {}

